<resources>
    <string name="app_name">TripGuideUA</string>
    <string name="Takyi_ekran">Тут такий собі екран</string>
    <string name="action_settings">Налаштування</string>
    <string name="action_email">Емейл</string>
    <string name="action_menu_SuggestAnObject">Запропонувати об\'єкт</string>
    <string name="action_menu_2">меню 2</string>
    <string name="action_menu_3">меню 3</string>
    <string name="invis_group">Скрити групу</string>
    <string name="invis_item">Скрити пункт меню</string>
    <string name="choose_excursion">Підібрати екскурсію</string>
    <string name="choose_from_list">Обрати зі списку</string>
    <string name="create_excursion">Створити екскурсію</string>
    <string name="title_activity_maps">Map</string>
    <string name="more">Деталі</string>
    <string name="working_hours">Графік роботи:</string>
    <string name="type_of">Тип:</string>
    <string name="on_map">на карті</string>
    <string name="title_activity_routes">Прокладений маршрут</string>
    <string name="test">ТестГолоп</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="choose_objects">Оберіть об\'єкти</string>
    <string name="city_name">Назва міста</string>
    <string name="create_route">Прокласти маршрут</string>
    <string name="actual">Актуальна</string>
    <string name="sightseeing">Оглядова</string>
    <string name="attractions">Пам\'ятки</string>
    <string name="architecture">Архітектура</string>
    <string name="nature">Природа</string>
    <string name="museum">Музеї</string>
    <string name="custom_title">Оберіть типи екскурсії:</string>
    <string name="brake_title">Перерив на перекус</string>
    <string name="brake_description">В довготривалій екскурсії, внести до маршруту заклади, де можна поїсти та сходити в туалет</string>
</resources>
